--- a/index.html
+++ b/index.html
@@ -1,30 +1,47 @@
-<!doctype html>
-<html lang="es">
+<!DOCTYPE html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Como exportar html a excel</title>
-
-    <!-- links para exportar a excel -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Exportar a Excel y PDF</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.5.3/jspdf.debug.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.3.2/html2canvas.js"></script>
     <script src="https://unpkg.com/xlsx@0.16.9/dist/xlsx.full.min.js"></script>
     <script src="https://unpkg.com/file-saverjs@latest/FileSaver.min.js"></script>
     <script src="https://unpkg.com/tableexport@latest/dist/js/tableexport.min.js"></script>
-
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        table {
+            width: 100%;
+            border-collapse: collapse;
+            margin-bottom: 20px;
+        }
+        th, td {
+            border: 1px solid black;
+            padding: 8px;
+            text-align: left;
+        }
+        th {
+            background-color: #f2f2f2;
+        }
+        button {
+            margin-bottom: 10px;
+        }
+    </style>
 </head>
 <body>
-<br><br>
 
 <div class="container">
     <div class="card">
         <div class="card-header">
-            Como exportar datos de html a excel
+            Exportar datos a Excel y PDF
         </div>
         <div class="card-body">
-            <button id="btnExportar" class="btn btn-success">
-                <i class="fas fa-file-excel"></i> Exportar datos a Excel
+            <button id="btnExportarExcel" class="btn btn-success">
+                <i class="fas fa-file-excel"></i> Exportar a Excel
+            </button>
+            <button id="btnExportarPDF" class="btn btn-primary">
+                <i class="fas fa-file-pdf"></i> Exportar a PDF
             </button>
 
             <table id="tabla" class="table table-border table-hover">
@@ -59,14 +76,50 @@
                     <td>9123456</td>
                     <td>25</td>
                 </tr>
-
                 </tbody>
             </table>
         </div>
     </div>
 </div>
 
-<script src="main.js"></script>
+<script>
+    document.addEventListener("DOMContentLoaded", function() {
+        const $btnExportarExcel = document.querySelector("#btnExportarExcel");
+        const $btnExportarPDF = document.querySelector("#btnExportarPDF");
+        const $tabla = document.querySelector("#tabla");
+
+        $btnExportarExcel.addEventListener("click", exportarExcel);
+        $btnExportarPDF.addEventListener("click", exportarPDF);
+
+        function exportarExcel() {
+            let tableExport = new TableExport($tabla, {
+                exportButtons: false,
+                filename: "Reporte",
+                sheetname: "Reporte",
+            });
+            let datos = tableExport.getExportData();
+            let preferenciasDocumento = datos.tabla.xlsx;
+            tableExport.export2file(preferenciasDocumento.data, preferenciasDocumento.mimeType, preferenciasDocumento.filename, preferenciasDocumento.fileExtension, preferenciasDocumento.merges, preferenciasDocumento.RTL, preferenciasDocumento.sheetname);
+        }
+
+        function exportarPDF() {
+            var doc = new jsPDF('p', 'pt', 'letter');
+            var margin = 20;
+            var scale = (doc.internal.pageSize.width - margin * 2) / document.body.clientWidth;
+
+            doc.html($tabla, {
+                x: margin,
+                y: margin,
+                html2canvas:{
+                    scale: scale,
+                },
+                callback: function(doc){
+                    doc.output('dataurlnewwindow', {filename: 'pdf.pdf'});
+                }
+            });
+        }
+    });
+</script>
 
 </body>
 </html>
